--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     </nav>
     <main>
-        <section>
+        <section class="wrapper">
             <img src="images\caef4b4b74c7513cdc093500d0957b91.gif" alt="Fsociety_gif">
 
             <article>
