--- a/index.html
+++ b/index.html
@@ -13,31 +13,19 @@
             HOME
         </a>
         <nav>
-            <a href="#menu">Menu</a>
+            <a href="/index.html">Home</a>
+            <a href="/works.html">Works</a>
+            <a href="/gallery.html">Gallery</a>
+            <a href="/about.html">About</a>
         </nav>
     </header>
 
-    <nav id="menu">
-        <ul class="links">
-            <li>
-                <a href="/index.html">Home</a>
-            </li>
-            <li>
-                <a href="/works.html">Works</a>
-            </li>
-            <li>
-                <a href="/gallery.html">Gallery</a>
-            </li>
-            <li>
-                <a href="/about.html">About</a>
-            </li>
-            
-        </ul>
+ 
 
-    </nav>
+
     <main>
         <section class="wrapper">
-            <img src="images\caef4b4b74c7513cdc093500d0957b91.gif" alt="Fsociety_gif">
+            <img src="images/caef4b4b74c7513cdc093500d0957b91.gif" alt="Fsociety_gif">
 
             <article>
                 <p>
@@ -96,7 +84,7 @@
         </section>
 
         <section>
-        <img src="images\mr-robot.jpg" alt="Wide_image">
+        <img src="images/mr-robot.jpg" alt="Wide_image">
         </section>
     </main>
     <footer>
