--- a/about.html
+++ b/about.html
@@ -6,37 +6,23 @@
     <title>About</title>
     <link rel="stylesheet" href="/assets/css/main.css">
 </head>
-<body>
+<body class="is-preload">
     <header id="header">
-        <a href="/index.html">
+        <a class="logo" href="/about.html">
             ABOUT
         </a>
         <nav>
-            <a href="#menu">Menu</a>
+            <a href="/index.html">Home</a>
+            <a href="/works.html">Works</a>
+            <a href="/gallery.html">Gallery</a>
+            <a href="/about.html">About</a>
         </nav>
+
     </header>
 
-    <nav id="menu">
-        <ul class="links">
-            <li>
-                <a href="/index.html">Home</a>
-            </li>
-            <li>
-                <a href="/works.html">Works</a>
-            </li>
-            <li>
-                <a href="/gallery.html">Gallery</a>
-            </li>
-            <li>
-                <a href="/about.html">About</a>
-            </li>
-            
-        </ul>
-
-    </nav>
     <main>
         <section>
-            <img src="images\About.jpg" alt="">
+            <img src="images/About.jpg" alt="">
         </section>
     </main>
     <footer>
