--- a/gallery.html
+++ b/gallery.html
@@ -6,32 +6,18 @@
     <title>Gallery</title>
     <link rel="stylesheet" href="/assets/css/main.css">
 </head>
-<body>
+<body class="is-preload">
     <header id="header">
-        <a href="/index.html">
+        <a class="logo" href="/gallery.html">
             GALLERY
         </a>
         <nav>
-            <a href="#menu">Menu</a>
+            <a href="/index.html">Home</a>
+            <a href="/works.html">Works</a>
+            <a href="/gallery.html">Gallery</a>
+            <a href="/about.html">About</a>
         </nav>
     </header>
-
-    <nav id="menu">
-        <ul class="links">
-            <li>
-                <a href="/index.html">Home</a>
-            </li>
-            <li>
-                <a href="/works.html">Works</a>
-            </li>
-            <li>
-                <a href="/gallery.html">Gallery</a>
-            </li>
-            <li>
-                <a href="/about.html">About</a>
-            </li>
-            
-        </ul>
 
     </nav>
     <main>
