--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
     </main>
     <footer>
         <section>
-            <p><a href="#">Ugrás a tetejére</a></p>         
+            <p><a style="margin: 20px; color: black" href="#">Back to Top</p>   
             
         </section>
     </footer>
