responsive gallery&works

--- a/about.html
+++ b/about.html
@@ -21,13 +21,36 @@
     </header>
 
     <main>
-        <section>
-            <img src="images/About.jpg" alt="">
+        <section class="wrapper">
+            <div class="inner">
+                <header class="special">
+                    <h2>About Elliot Alderson (Mr. Robot)</h2>
+                </header>  
+            </div>
+        </section> 
+        <section style="margin: 0px 50px 30px 30px">
+            <p style="float: left; margin: 0px 30px 30px 30px;"><img src="images/About.jpg" alt="" class="responsive"></p>
+            <h3 style="margin-left: 30px; margin-bottom: 10px;">Occupation</h3>   
+            <ul style="margin-left: 30px;">
+                <li>As a senior network technician for cyber security firm Allsafe, Elliot protects corporate clients — including the ubiquitous Evil Corp — from security breaches and data theft. </li>
+                <li>As a vigilante hacker, he monitors the people in his daily life and protects those he’s close to from their own flaws, sometimes with unpredictable results.</li>            
+            </ul>
+            
+
+            <h3 style="margin-left: 30px; margin-bottom: 10px;">Bio</h3>
+            <ol style="margin-left: 30px;">
+                <li>Originally from Washington Township, New Jersey, Elliot now lives alone on the Lower East Side. He suffers from crippling anxiety, which stems from memories of his difficult childhood. 
+                    His father died when Elliot was young, and his now-estranged mother was brutally cruel.</li>
+                <li>Elliot has spent most of his adult life isolated from the world around him. After being arrested for financial hacking, he has been attending court-ordered therapy for almost a year. 
+                    Elliot, however, prefers self-medication by morphine, an addiction he mediates with suboxone. He obtains both from his next door neighbor, Shayla.</li>
+                <li>With the arrival of Mr. Robot, Elliot’s world changes entirely. Fsociety’s members and mission offer him a renewed purpose -- though accompanied by a risk of heightened paranoia -- 
+                    leaving him faced with the question of whether to numbly continue the life he knows or risk everything and participate in Mr. Robot’s revolution.</li>                
+            </ol>
         </section>
     </main>
     <footer>
         <section>
-            <p><a style="margin: 20px; color: black" href="#">Back to Top</p>   
+            <p><a style="margin-left: 57px; color: black" href="#">Back to Top</p>   
             
         </section>
     </footer>
