--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             
             <section>
                 <div style="background-color: black;">
-                    <img style= "margin-left:20px; width: 960px; height: 480px;" src="images/mr-robot.jpg" alt="Wide_image">
-                    <img style="align-items: right; width: 600px; height:480px;" src="images/caef4b4b74c7513cdc093500d0957b91.gif" alt="Fsociety_gif">
+                    <img class= "responsive" src="images/mr-robot.jpg" alt="Wide_image">
+                    <img class= "responsive" src="images/caef4b4b74c7513cdc093500d0957b91.gif" alt="Fsociety_gif">
                 </div>
             </section>
             
