--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             </div>
         </section> 
         <section style="margin: 0px 50px 30px 30px">
-            <p style="float: left; margin: 0px 30px 30px 30px;"><img src="images/About.jpg" alt="" class="responsive"></p>
+            <p style="float: left; margin: 0px 30px 0px 30px;"><img src="images/About.jpg" alt="" class="responsive"></p>
             <h3 style="margin-left: 30px; margin-bottom: 10px;">Occupation</h3>   
             <ul style="margin-left: 30px;">
                 <li>As a senior network technician for cyber security firm Allsafe, Elliot protects corporate clients — including the ubiquitous Evil Corp — from security breaches and data theft. </li>
@@ -47,6 +47,39 @@
                     leaving him faced with the question of whether to numbly continue the life he knows or risk everything and participate in Mr. Robot’s revolution.</li>                
             </ol>
         </section>
+<br><br>
+        <section class="wrapper">
+            <div class="inner">
+                <header class="special">
+                    <h2>Contact</h2>
+                </header>  
+            </div>
+        </section> 
+
+<section style="margin: 0px 57px 10px 57px;">
+<form>
+    <div>
+        <label style="margin-top:10px" for="name">Név: *</label>
+        <input id="name" name="name" type="text" required>
+    </div>
+    <div>
+        <label style="margin-top:10px" for="email">Email cím: *</label>
+        <input id="email" name="email" type="email" required>
+    </div>
+    <div>
+        <label style="margin-top:10px" for="address">Cím: *</label>
+        <input id="address" name="address" type="text" required>
+    </div>
+    <div>
+        <label style="margin-top:10px" for="address">Megjegyzés:</label>
+        <textarea id="comment" name="comment" rows="5"></textarea>
+    </div>
+    
+</form>
+
+</section>
+
+
     </main>
     <footer>
         <section>
