--- a/about.html
+++ b/about.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="/assets/css/main.css">
+    <style>
+        body {
+          background: rgba(175, 112, 76, 0.3);                    
+        }
+    </style>
 </head>
 <body class="is-preload">
     <header id="header">
@@ -17,6 +22,7 @@
             <a href="/gallery.html">Gallery</a>
             <a href="/about.html">About</a>
         </nav>
+        
 
     </header>
 
