--- a/gallery.html
+++ b/gallery.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery</title>
     <link rel="stylesheet" href="/assets/css/main.css">
+    <style>
+        body {
+          background: rgba(175, 112, 76, 0.3);                    
+        }
+    </style>
 </head>
 <body class="is-preload">
     <header id="header">
