--- a/about.html
+++ b/about.html
@@ -97,7 +97,8 @@
     </main>
     <footer>
         <section>
-            <p><a style="margin-left: 57px; color: black" href="#">Back to Top</p>   
+            
+            <p><a style="margin: 80px 50px 50px 57px; color: black" href="#">Back to Top</p>     
             
         </section>
     </footer>
