--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     </main>
     <footer>
         <section>
-            <p><a style="margin: 20px; color: black" href="#">Back to Top</p>        
+            <p><a style="margin: 80px 50px 50px 57px; color: black" href="#">Back to Top</p>         
                 
             </section>
         </footer>
